# angler_bot_v2

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  index.html
assets/: fishingrod.aseprite  fishingrod_under_construction.aseprite  island.aseprite  jerrie.aseprite  rod_with_fish.aseprite  turtle.aseprite
data/: config.exampe.toml  config.toml
data/gamedata/: bait.ron  fish_types.ron  lines.ron  reels.ron  rods.ron  shop.ron  sinkers.ron
src/: discord.rs  embed_helper.rs  error.rs  helpers.rs  logging.rs  main.rs
src/commands/: bait.rs  cast.rs  game_tips.rs  info.rs  inventory.rs  mod.rs  ping.rs  shop.rs
src/commands/admin/: mod.rs  register_channel.rs
src/data_management/: config.rs  guildfile.rs  mod.rs  monetary.rs  old_userfile.rs  userfile.rs  version_uf_converter.rs
src/embeds/: mod.rs  shop.rs
src/fishing/: bait_bucket.rs  depth.rs  fish.rs  inventory.rs  mod.rs  rarity.rs  shop.rs
src/fishing/fish_data/: event.rs  fish.rs  mod.rs  rarity.rs
src/fishing/rod_data/: bait.rs  lines.rs  mod.rs  reels.rs  rods.rs  sinkers.rs
src/gui/: app.rs  config_editor.rs  console.rs  logging.rs  mod.rs  user_editor.rs
