[package]
name = "angler_bot_v2"
version = "0.1.0"
edition = "2024"
authors = ["Eric (Skepz) <skepz.dev@gmail.com>"]

[dependencies]
better_term = "*"
dotenv = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread", "signal"]}
rand = "*"
lazy_static = "*"
serde = "*"
serde_json = "*"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend", "gateway", "client", "collector", "model"]
version = "*"
