[package]
name = "angler_bot_v2"
version = "0.1.0"
edition = "2024"
authors = ["Eric (Skepz) <skepz.dev@gmail.com>"]

[features]
default = [] # add "guild_relative_userdata" to make it run by default
guild_relative_userdata = []

[dependencies]
better_term = "*"
dotenv = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread", "signal"]}
rand = "*"
rand_distr = "*"
serde = "*"
ron = "*"
toml = "*"
chrono = "*"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend", "gateway", "client", "collector", "model", "builder"]
version = "*"
