[package]
name = "angler_bot_v2"
version = "2.1.0"
edition = "2024"
authors = ["Eric (Skepz) <skepz.dev@gmail.com>"]

[dependencies]
better_term = "1.4.61"
dotenv = "0.15.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"]}
rand = "0.9.2"
rand_distr = "0.5.1"
serde = "1.0.228"
ron = "0.12.0"
toml = "0.9.11+spec-1.1.0"
chrono = "0.4.42"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend", "gateway", "client", "collector", "model", "builder"]
version = "0.12.5"
